<resources>
    <string name="app_name">BT.DanhBa</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="_0123456789">0123456789</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>